message ScUnion
{
    required string Id = 1;
    required double Latitude = 2;
    required double Longitude = 3;
    required float COG = 4;
    required float SOG = 5;
    optional float ROT = 6;
    optional float TrueHeading = 7 [default = 511];
    optional sfixed32 MMSI = 8;
    optional int32 NavStatus = 9 [default = 15];
    required sfixed64 DynamicTime = 10;
    optional int32 Timeout = 13 [default = 600];

    optional sfixed64 StaticTime = 30;
    optional string Name = 31;
    optional string CallSign = 32;
    optional sfixed32 IMO = 33;
    optional sfixed64 ETA = 34;
    optional string Destination = 35;
    optional float Draught = 36;
    optional int32 Length = 37;
    optional int32 Width = 38;
    optional int32 RefToProw = 39;
    optional int32 RefToLarboard = 40;
    optional int32 ShipCargoType = 41;

    optional int64 IMEI = 51;
    optional string SIM = 52;

    optional string V_Name = 70;
    optional int32 V_ShipCargoType = 71;
    optional float V_Length = 72;
    optional float V_Width = 73;

	optional int32 VesselTag=100;
	repeated int32 VesselGroups=101;
}
